--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header_content %}
-<div class="header" style="margin-bottom: 20px;"><i class="fa fa-user"></i>User´s Name
+<div class="header" style="margin-bottom: 20px;"><i class="fa fa-user"></i>{{student.user.name}}
     <div class="header_buttons">
         <button type="button" onclick="location.href = '#'">Message</button>
     </div>
@@ -16,38 +16,89 @@
 
 {% block page_content %}
 <div class="page_content">
-    <div class="viewed-student-info">
-        <hr>
-        <div id= "data-page">
-            <div id= "data-table">
-                <table id="user-info-table">
-                    <tr>
-                        <td >E-mail: </td>
-                        <td >x.y@ug.bilkent.edu.tr</td>
-                    </tr>
-                    <tr>
-                        <td>Phone: </td>
-                        <td>0555 555 55 55</td>
-                    </tr>
-                    <tr>
-                        <td>University/Mobility Period </td>
-                        <td> unknown </td>
-                    </tr>
-                    <tr>
-                        <td>Status</td>
-                        <td>Erasmus Successful</td>
-                    </tr>
-                    <tr>
-                        <td>Id</td>
-                        <td>2xxxxxxx</td>
-                    </tr>
-                </table>
+    <div class="student-info">
+        <table id="user-info-table">
+            <tr>
+                <td>E-mail:</td>
+                <td>{{student.user.email}}</td>
+            </tr>
+            <tr>
+                <td>Phone:</td>
+                <td>{{student.user.phone}}</td>
+            </tr>
+            <tr>
+                <td>University/Mobility Period</td>
+                <td>NULL</td>
+            </tr>
+            <tr>
+                <td>Status</td>
+                <td>{{student.status}}</td>
+            </tr>
+            <tr>
+                <td>Id</td>
+                <td>{{student.user.bilkent_id}}</td>
+            </tr>
+        </table>
+        <div>
+            <div>
+                <h2>Current Courses Taken</h2>
+        <table class="file-table">
+            <thead>
+                <tr>
+                    <th style="width:65px" id="count"></th>
+                    <th style="width:175px">Type</th>
+                    <th style="width:250px">Name</th>
+                    <th style="width:225px">Date</th>
+                    <th style="width:350px" colspan="2">Operations</th>
+                </tr>
+                </thead>
+            <tbody>
+            {% for document in documents %}
+                <tr>
+                    <td style="width:65px" id="count"></td>
+                    <td style="width:150px">{{document.document_type}}</td>
+                    <td style="width:175px">{{document.document_name}}</td>
+                    <td style="width:200px">{{document.date}}</td>
+                    <td style="width:350px;">
+                        <button href="#" type="button">View</button>
+                        <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
+                    </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+                </div>
+            <div>
+            <table class="file-table">
+            <thead>
+                <tr>
+                    <th style="width:65px" id="count"></th>
+                    <th style="width:175px">Type</th>
+                    <th style="width:250px">Name</th>
+                    <th style="width:225px">Date</th>
+                    <th style="width:350px" colspan="2">Operations</th>
+                </tr>
+                </thead>
+            <tbody>
+            {% for document in documents %}
+                <tr>
+                    <td style="width:65px" id="count"></td>
+                    <td style="width:150px">{{document.document_type}}</td>
+                    <td style="width:175px">{{document.document_name}}</td>
+                    <td style="width:200px">{{document.date}}</td>
+                    <td style="width:350px;">
+                        <button href="#" type="button">View</button>
+                        <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
+                    </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+                </div>
             </div>
-            <div class="courses-button">
-                <button id="button-part1" style="background-color: #130d3834;"> Student´s Courses </button>
-                <button id="button-part2" style="background-color: #130d3834;" > Student´s Files </button>
-            </div>
-        </div>
+    </div>
+    <div class="courses-button">
+        <button id="button-part1" style="background-color: #130d3834;"> Student´s Courses </button>
     </div>
 </div>
 
