--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -49,7 +49,7 @@
 
             <div class="profile">
                 <div class="profile_text">
-                    <p>{{request.user.username}} </p>
+                    <p>{{request.user.erasmus_user.name}} </p>
                     <p>{{email}}</p>
                 </div>
                 <li><a href="../../profile"><i class="fas fa-user"></i>Profile</a></li>
