--- a/erasmus/src/erasmus/accounts/static/styles.css
+++ b/erasmus/src/erasmus/accounts/static/styles.css
@@ -143,7 +143,7 @@ body{
 }
 
 input {
-  background-image: url('/css/searchicon.png');
+  /*background-image: url('/css/searchicon.png');*/
   background-position: 10px 12px; /
   background-repeat: no-repeat;
   font-size: 16px;
