--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -95,7 +95,7 @@
                     {% endif %}
 
                     <td rowspan="2">
-                        <a class="button" href="/remove-from-courses/{{courseKey.pk}}">Remove</a>
+                        <a class="button" href="/remove-from-courses/{{course.pk}}">Remove</a>
                     </td>
                     {% endif %}
                 </tr>
