--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -53,7 +53,10 @@
                         <th style="width:175px">Type</th>
                         <th style="width:250px">Name</th>
                         <th style="width:225px">Date</th>
-                        <th style="width:350px" colspan="2">Operations</th>
+                        <th style="width:350px" colspan="2">
+                            Operations
+                            <a class="button" href="#">Upload
+                        </a></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -66,7 +69,6 @@
                         <td style="width:350px;">
                             <button href="#" type="button">View</button>
                             <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
-                            <a class="button" href="#">Upload</a>
                         </td>
                     </tr>
                     {%endfor%}
@@ -78,56 +80,96 @@
                 <table class="course-table" style="width: 100%">
                     <thead>
                     <tr>
-                    <th style="width:6%" class="sorttable_nosort">Count</th>
-                    <th style="width:10%">Course Code</th>
-                    <th style="width:20%">Course Name</th>
-                    <th style="width:7%">Credits</th>
-                    <th style="width:20%">Course Code and Name for a Required Course,
-                    Elective Group Name for an Elective Requirement
-                    </th>
-                    <th style="width:7%">Credits</th>
-                    <th style="width:20%">Elective Requirement Exemptions only: Course code(s) of directly equivalent course(s), if any **</th>
-                    <th style="width:10%">Status</th>
-                </tr>
+                        <th style="width:6%" class="sorttable_nosort">Count</th>
+                        <th style="width:10%">Course Code</th>
+                        <th style="width:20%">Course Name</th>
+                        <th style="width:7%">Credits</th>
+                        <th style="width:20%">Course Code and Name for a Required Course,
+                        Elective Group Name for an Elective Requirement
+                        </th>
+                        <th style="width:7%">Credits</th>
+                        <th style="width:20%">Elective Requirement Exemptions only: Course code(s) of directly equivalent course(s), if any **</th>
+                        <th style="width:10%">Status</th>
+                    </tr>
                     </thead>
                     <tbody>
-                    {% for course in student_unmerged_courses %}
-                    <tr>
+                        {% for course in student_unmerged_courses %}
+                        <tr>
+                        <td id="count"></td>
+                        <td>{{course.code}}</td>
+                        <td>{{course.course_name}}</td>
+                        <td>{{course.course_credit}}</td>
+
+                        {% if course.bilkent_equivalent.course_type == MUST_COURSE %}
+                            <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
+                            <td>{{course.bilkent_equivalent.course_credit}}</td>
+                        {% else %}
+                            <td>{{course.bilkent_equivalent.elective_group_name}}</td>
+                            <td>{{course.bilkent_equivalent.course_credit}}</td>
+                        {% endif %}
+
+                        {% if course.bilkent_equivalent.course_type == ELECTIVE_COURSE %}
+                            <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
+                        {% else %}
+                            <td></td>
+                        {% endif %}
+
+                        {% if course.course.approved %}
+                            <td>Approved</td>
+                        {% elif course.course.is_rejected %}
+                            <td>Rejected</td>
+                        {% else %}
+                        <td>
+                            Waiting For Approval
+                            <div style="display: flex; gap: 10px;">
+                                <a class="button" href="/approve-course/{{course.course.pk}}">Approve</a>
+                                <a class="button" href="/reject-course/{{course.course.pk}}">Reject</a>
+                            </div>
+                        </td>
+                        {% endif %}
+                        </tr>
+                        {%endfor%}
+
+                        {% for courseKey, courseList in student_merged_course_dict.items %}
+                        {% for course in courseList %}
+                        <tr>
                     <td id="count"></td>
-                    <td>{{course.course.code}}</td>
-                    <td>{{course.course.course_name}}</td>
-                    <td>{{course.course.course_credit}}</td>
+                    <td>{{course.code}}</td>
+                    <td>{{course.course_name}}</td>
+                    <td>{{course.course_credit}}</td>
 
-                    {% if course.course.bilkent_equivalent.course_type == MUST_COURSE %}
-                    <td>{{course.course.bilkent_equivalent.course_code}}: {{course.course.bilkent_equivalent.course_name}}</td>
-                    <td>{{course.course.bilkent_equivalent.course_credit}}</td>
+                    {% if courseList.0 is course %}
+
+                    {% if courseKey.bilkent_equivalent.course_type == MUST_COURSE %}
+                    <td rowspan="2">{{courseKey.bilkent_equivalent.course_code}}: {{courseKey.bilkent_equivalent.course_name}}</td>
+                    <td rowspan="2">{{courseKey.bilkent_equivalent.course_credit}}</td>
                     {% else %}
-                    <td>{{course.course.bilkent_equivalent.elective_group_name}}</td>
-                    <td>{{course.course.bilkent_equivalent.course_credit}}</td>
+                    <td rowspan="2">{{courseKey.bilkent_equivalent.elective_group_name}}</td>
+                    <td rowspan="2">{{courseKey.bilkent_equivalent.course_credit}}</td>
                     {% endif %}
 
-                    {% if course.course.bilkent_equivalent.course_type == ELECTIVE_COURSE %}
-                    <td>{{course.course.bilkent_equivalent.course_code}}: {{course.course.bilkent_equivalent.course_name}}</td>
+                    {% if courseKey.bilkent_equivalent.course_type == ELECTIVE_COURSE %}
+                    <td rowspan="2">{{courseKey.bilkent_equivalent.course_code}}: {{courseKey.bilkent_equivalent.course_name}}</td>
                     {% else %}
-                    <td></td>
+                    <td rowspan="2"></td>
                     {% endif %}
 
-                    {% if course.course.approved %}
-                    <td>Approved</td>
-                    {% elif course.course.is_rejected %}
-                    <td>Rejected</td>
+                    {% if courseKey.approved %}
+                    <td rowspan="2">Approved</td>
+                    {% elif courseKey.is_rejected %}
+                    <td rowspan="2">Rejected</td>
                     {% else %}
-                    <td>
+                    <td rowspan="2">
                         Waiting For Approval
                         <div style="display: flex; gap: 10px;">
                             <a class="button" href="/approve-course/{{course.course.pk}}">Approve</a>
-                            <a class="button" href="/reject-course/{{course.course.pk}}">Reject</a>
-                         </div>
-                    </td>
-
+                           <a class="button" href="/reject-course/{{course.course.pk}}">Reject</a>
+                        </div></td>
                     {% endif %}
-                    </tr>
-                    {%endfor%}
+                    {% endif %}
+                </tr>
+                        {%endfor%}
+                        {%endfor%}
                     </tbody>
                 </table>
             </div>
