--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -125,14 +125,15 @@
         <div hidden="hidden" id="toggle-element-1">
             <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <div style="height:300px;overflow:auto;">
+                <table style="width:100%">
+                    <tr>
+                        <th class="sorttable_nosort" style="width:50%">{{student.university}} Courses</th>
+                        <th class="sorttable_nosort" style="width:50%">Bilkent University Equivalent Courses</th>
+                    </tr>
+                </table>
                 <table class="sortable" id="filtered_list" style="width:100%;">
 
                     <thead>
-                        <th class="sorttable_nosort"></th>
-                        <th colspan="3" class="sorttable_nosort">University Course</th>
-                        <th colspan="2" class="sorttable_nosort">Bilkent Equivalent</th>
-                        <th class="sorttable_nosort"></th>
-                        <th class="sorttable_nosort"></th>
                     <tr>
                         <th style="width:6%" class="sorttable_nosort">Count</th>
                         <th style="width:10%">Course Code</th>
@@ -153,9 +154,21 @@
                         <td>{{course.code}}</td>
                         <td>{{course.course_name}}</td>
                         <td>{{course.course_credit}}</td>
+
+                        {% if course.bilkent_equivalent.course_type == MUST_COURSE %}
                         <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                         <td>{{course.bilkent_equivalent.course_credit}}</td>
-                        <td>NULL</td>
+                        {% else %}
+                        <td>{{course.bilkent_equivalent.elective_group_name}}</td>
+                        <td>{{course.bilkent_equivalent.course_credit}}</td>
+                        {% endif %}
+
+                        {% if course.bilkent_equivalent.course_type == ELECTIVE_COURSE %}
+                        <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
+                        {% else %}
+                        <td></td>
+                        {% endif %}
+
                         <td><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
                     </tr>
                     {%endfor%}
