--- a/erasmus/src/erasmus/accounts/static/student_profile_from_coordinator.css
+++ b/erasmus/src/erasmus/accounts/static/student_profile_from_coordinator.css
@@ -2,7 +2,9 @@
   width: 98%;
   display: flex;
 }
-
+#info-table-container{
+    width: 70%;
+}
 #user-name{
   width: 100%;
   padding-top: 50px;
@@ -26,4 +28,8 @@
 #user-info-table{
   width: 50%
 }
-
+.user-info-table-{
+  align-content: center;
+  text-align: center;
+  padding-left: 30%;
+}
