--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -17,9 +17,39 @@
 {% block page_content %}
 <div class="page_content">
     <div class="student-info">
-        <div>
+        {% if  user_type == "Student" %}
+
+        <div id="info-table-container">
             <h2>Student's Info</h2>
-            <table id="user-info-table" style="width: 100%">
+            <table class= "user-info-table-" style="width: 100%">
+                <tr>
+                    <td style="width: 50%">E-mail:</td>
+                    <td>{{student.user.email}}</td>
+                </tr>
+                <tr>
+                    <td>Phone:</td>
+                    <td>{{student.user.phone}}</td>
+                </tr>
+                <tr>
+                    <td>University/Mobility Period</td>
+                    <td>NULL</td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td>{{student.status}}</td>
+                </tr>
+                <tr>
+                    <td>Id</td>
+                    <td>{{student.user.bilkent_id}}</td>
+                </tr>
+            </table>
+        </div>
+        {%endif%}
+
+        {% if not user_type == "Student" %}
+        <div  >
+            <h2>Student's Info</h2>
+            <table class="user-info-table" style="width: 100%">
                 <tr>
                     <td>E-mail:</td>
                     <td>{{student.user.email}}</td>
@@ -42,8 +72,7 @@
                 </tr>
             </table>
         </div>
-        {% if not user_type == "Student" %}
-        <div>
+        <div >
             <div>
                 <h2>Student's Files</h2>
                 <table class="file-table" style="width: 100%">
